updated index.html (forgot)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron" id="timeline-container"></div>
+      <div class="jumbotron" id="tidelineContainer"></div>
     </div>
     <script type="text/javascript" src="js/bundle.js"></script>
   </body>
