switching to current-progress.html, image reorganization

--- a/example/current-progress.html
+++ b/example/current-progress.html
@@ -19,11 +19,11 @@
             <span class="tidelineNavLabel inactive">Two Weeks</span>
           </div>
           <div class="col-xs-6" id="tidelineLabel">
-            <img src="../img/blip_icons_back.svg" id="tidelineNavBack" />
+            <img src="blip_icons_back.svg" id="tidelineNavBack" />
             <span class="tidelineSpacer"></span>
             <span class="tidelineNavLabel">1 Monthary 1064</span>
             <span class="tidelineSpacer"></span>
-            <img src="../img/blip_icons_next.svg" id="tidelineNavForward" />
+            <img src="blip_icons_next.svg" id="tidelineNavForward" />
           </div>
           <div class="col-xs-3 tidelineNavRightLabel">
             <span class="tidelineNavLabel inactive">Most Recent</span>
