updated to Open Sans typography

--- a/example/current-progress.html
+++ b/example/current-progress.html
@@ -8,6 +8,32 @@
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="../css/tideline.css" rel="stylesheet" type="text/css">
     <link href="example.css" rel="stylesheet" type="text/css">
+    <style>
+        @font-face {
+          font-family: 'Open Sans';
+          font-style: normal;
+          font-weight: 400;
+          src: local('Open Sans'), local('OpenSans'), url('../fonts/opensans.woff') format('woff');
+        }
+        @font-face {
+          font-family: 'Open Sans';
+          font-style: normal;
+          font-weight: 700;
+          src: local('Open Sans Bold'), local('OpenSans-Bold'), url('../fonts/opensans-bold.woff') format('woff');
+        }
+        @font-face {
+          font-family: 'Open Sans';
+          font-style: italic;
+          font-weight: 400;
+          src: local('Open Sans Italic'), local('OpenSans-Italic'), url('../fonts/opensans-italic.woff') format('woff');
+        }
+        @font-face {
+          font-family: 'Open Sans';
+          font-style: italic;
+          font-weight: 700;
+          src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url('../fonts/opensans-bolditalic.woff') format('woff');
+        }
+    </style>
   </head>
   <body>
     <div class="container">
