added second option for extended boluses: lines with terminal triangles

--- a/example/index.html
+++ b/example/index.html
@@ -40,6 +40,10 @@
                   <dt><a href="extended-boluses-1.html" target="_blank">Extended Boluses 1</a></dt>
                   <dd>Triangles with dotted fill</dd>
                 </dl>
+                <dl>
+                  <dt><a href="extended-boluses-2.html" target="_blank">Extended Boluses 2</a></dt>
+                  <dd>Lines with terminal triangles</dd>
+                </dl>
             </div>
         </div>
     </div>
