--- a/example/index.html
+++ b/example/index.html
@@ -29,6 +29,10 @@
                     <dt><a href="recommended-boluses-2.html" target="_blank">Recommended Bolsues 2</a></dt>
                     <dd>Partially filled bars</dd>
                 </dl>
+                <dl>
+                    <dt><a href="recommended-boluses-3.html" target="_blank">Recommended Bolsues 3</a></dt>
+                    <dd>No-outline variably-colored rectangles, with triangles to indicate dose delivered (no triangles added yet though)</dd>
+                </dl>
             </div>
         </div>
         <div class="row">
