added fourth option for recommended boluses, combo of options 2 and 3

--- a/example/index.html
+++ b/example/index.html
@@ -31,7 +31,11 @@
                 </dl>
                 <dl>
                     <dt><a href="recommended-boluses-3.html" target="_blank">Recommended Bolsues 3</a></dt>
-                    <dd>No-outline variably-colored rectangles, with triangles to indicate dose delivered (no triangles added yet though)</dd>
+                    <dd>No-outline variably-colored rectangles</dd>
+                </dl>
+                <dl>
+                    <dt><a href="recommended-boluses-4.html" target="_blank">Recommended Bolsues 4</a></dt>
+                    <dd>Combo of options 2 and 3: no-outline variably colored rectangles for underrides, same variable fill but border for overrides</dd>
                 </dl>
             </div>
         </div>
