updated gallery nav page to include link to current progress

--- a/example/index.html
+++ b/example/index.html
@@ -54,6 +54,11 @@
                 </dl>
             </div>
         </div>
+        <div class="jumbotron">
+            <div class="page-header">
+              <h1>Current Progress <small>the state of <a href="current-progress.html">things as they are</a></small></h1>
+            </div>
+        </div>
     </div>
   </body>
 </html>
