add first crack at basal tooltips to gallery; remove dead gallery links

--- a/example/index.html
+++ b/example/index.html
@@ -13,44 +13,23 @@
     <div class="container-fluid">
         <div class="jumbotron">
             <div class="page-header">
-              <h1>Boluses! <small>Recommended, Extended</small></h1>
+              <h1>Basals <small>Tooltips</small></h1>
             </div>
         </div>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <p class="lead">Recommended vs. Delivered</p>
-            </div>
-            <div class="col-md-8 col-md-offset-2">
                 <dl>
-                  <dt><a href="recommended-boluses-1.html" target="_blank">Recommended Boluses 1</a></dt>
-                  <dd>Dashed lines</dd>
-                </dl>
-                <dl>
-                    <dt><a href="recommended-boluses-2.html" target="_blank">Recommended Bolsues 2</a></dt>
-                    <dd>Partially filled bars</dd>
-                </dl>
-                <dl>
-                    <dt><a href="recommended-boluses-3.html" target="_blank">Recommended Bolsues 3</a></dt>
-                    <dd>No-outline variably-colored rectangles</dd>
-                </dl>
-                <dl>
-                    <dt><a href="recommended-boluses-4.html" target="_blank">Recommended Bolsues 4</a></dt>
-                    <dd>Combo of options 2 and 3: no-outline variably colored rectangles for underrides, same variable fill but border for overrides</dd>
-                </dl>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <p class="lead">Extended (Square- and Dual-Wave)</p>
-            </div>
-            <div class="col-md-8 col-md-offset-2">
-                <dl>
-                  <dt><a href="extended-boluses-1.html" target="_blank">Extended Boluses 1</a></dt>
-                  <dd>Triangles with dotted fill</dd>
-                </dl>
-                <dl>
-                  <dt><a href="extended-boluses-2.html" target="_blank">Extended Boluses 2</a></dt>
-                  <dd>Lines with terminal triangles</dd>
+                  <dt><a href="basal-tooltips-1.html" target="_blank" class="lead">First crack at basal tooltips</a></dt>
+                  <dd>
+                    <ul class="list-unstyled">
+                        <li>
+                            <p>NB: The images need to be wider to accommodate the text in some cases.</p>
+                        </li>
+                        <li>
+                            <p>Waiting for a bugfix on basalutil.js to fill in the info about the scheduled basal rate that was overridden by a temp basal.</p>
+                        </li>
+                    </ul>
+                  </dd>
                 </dl>
             </div>
         </div>
