--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container-fluid">
-        <div class="jumbotron">
+<!--         <div class="jumbotron">
             <div class="page-header">
               <h1>Basals <small>Tooltips</small></h1>
             </div>
@@ -32,7 +32,7 @@
                   </dd>
                 </dl>
             </div>
-        </div>
+        </div> -->
         <div class="jumbotron">
             <div class="page-header">
               <h1>Current Progress <small>the state of <a href="current-progress.html">things as they are</a></small></h1>
