--- a/example/index.html
+++ b/example/index.html
@@ -11,28 +11,32 @@
   </head>
   <body>
     <div class="container-fluid">
-<!--         <div class="jumbotron">
+        <div class="jumbotron">
             <div class="page-header">
-              <h1>Basals <small>Tooltips</small></h1>
+              <h1>Carbs and Bolus <small>Tooltips</small></h1>
             </div>
         </div>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <dl>
-                  <dt><a href="basal-tooltips-1.html" target="_blank" class="lead">First crack at basal tooltips</a></dt>
+                  <dt><a href="carbs-and-bolus-tooltips.html" target="_blank" class="lead">First crack at carbs and bolus tooltips</a></dt>
                   <dd>
                     <ul class="list-unstyled">
                         <li>
-                            <p>NB: The images need to be wider to accommodate the text in some cases.</p>
+                            <p>The images may need to be wider to accommodate the text in some cases.</p>
                         </li>
                         <li>
-                            <p>Waiting for a bugfix on basalutil.js to fill in the info about the scheduled basal rate that was overridden by a temp basal.</p>
+                            <p>Known issue: at the right edge of the display, the additional text on the two- and three-line bolus tooltips is not getting shifted to the left.</p>
+                        </li>
+
+                        <li>
+                            <p>The tooltips are anchored at the base of the rectangles because otherwise (if they were anchored at the tips of the rectangles) the carbs and bolus tooltips would overlap on small displays. I might be able to parametrize this depending on the size of the display, but for now I think this is best.</p>
                         </li>
                     </ul>
                   </dd>
                 </dl>
             </div>
-        </div> -->
+        </div>
         <div class="jumbotron">
             <div class="page-header">
               <h1>Current Progress <small>the state of <a href="current-progress.html">things as they are</a></small></h1>
