--- a/example/current-progress.html
+++ b/example/current-progress.html
@@ -18,37 +18,8 @@
   <head>
     <meta charset="utf-8">
     <title>Tideline: Current Progress</title>
-    <script type="text/javascript" src="../bower_components/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="../bower_components/d3/d3.min.js"></script>
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="../css/tideline.css" rel="stylesheet" type="text/css">
     <link href="example.css" rel="stylesheet" type="text/css">
-    <style>
-        @font-face {
-          font-family: 'Open Sans';
-          font-style: normal;
-          font-weight: 400;
-          src: local('Open Sans'), local('OpenSans'), url('../fonts/opensans.woff') format('woff');
-        }
-        @font-face {
-          font-family: 'Open Sans';
-          font-style: normal;
-          font-weight: 700;
-          src: local('Open Sans Bold'), local('OpenSans-Bold'), url('../fonts/opensans-bold.woff') format('woff');
-        }
-        @font-face {
-          font-family: 'Open Sans';
-          font-style: italic;
-          font-weight: 400;
-          src: local('Open Sans Italic'), local('OpenSans-Italic'), url('../fonts/opensans-italic.woff') format('woff');
-        }
-        @font-face {
-          font-family: 'Open Sans';
-          font-style: italic;
-          font-weight: 700;
-          src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url('../fonts/opensans-bolditalic.woff') format('woff');
-        }
-    </style>
   </head>
   <body>
     <div class="container">
@@ -83,7 +54,12 @@
         </div>
       </div>
     </div>
+
+    <script type="text/javascript" src="../bower_components/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="../bower_components/d3/d3.min.js"></script>
     <script type="text/javascript" src="../bower_components/underscore/underscore-min.js"></script>
+    <script type="text/javascript" src="../bower_components/Duration.js/duration.js"></script>
+    <script type="text/javascript" src="../bower_components/bows/dist/bows.min.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
