add gallery placeholder

--- a/example/index.html
+++ b/example/index.html
@@ -12,12 +12,13 @@
     </head>
     <body>
         <div class="container-fluid">
-            <!--         <div class="jumbotron">
-            <div class="page-header">
-              <h1>Carbs and Bolus <small>Tooltips</small></h1>
-            </div>
-        </div>
-        <div class="row">
+            <div class="jumbotron">
+                <div class="page-header">
+                    <h1>
+                        Gallery <small>is empty right now... :(</small>
+                    </h1>
+                </div>
+            </div><!--         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <dl>
                   <dt><a href="gallery-link.html" target="_blank" class="lead">Gallery category</a></dt>
@@ -38,7 +39,9 @@
             </div>
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h3>Nota Bene:</h3>
+                    <h3>
+                        Nota Bene:
+                    </h3>
                     <p>
                         The tooltips are anchored at the base of the rectangles because otherwise (if they were anchored at the tips of the rectangles) the carbs and bolus tooltips would overlap on small displays. I might be able to parametrize this depending on the size of the display, but for now I think this is best.
                     </p>
