add log scales gallery

--- a/example/index.html
+++ b/example/index.html
@@ -15,21 +15,31 @@
             <div class="jumbotron">
                 <div class="page-header">
                     <h1>
-                        Gallery <small>is empty right now... :(</small>
+                        Gallery <!-- <small>is empty right now... :(</small> -->
                     </h1>
                 </div>
-            </div><!--         <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <dl>
-                  <dt><a href="gallery-link.html" target="_blank" class="lead">Gallery category</a></dt>
-                  <dd>
-                    <ul class="list-unstyled">
-                        <li><p></p></li>
-                    </ul>
-                  </dd>
-                </dl>
+            </div> 
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <dl>
+                      <dt><a href="bg-log-scale-1.html" target="_blank" class="lead">Log scale #1</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Domain set to extent (i.e., min, max) of actual data</p></li>
+                            <li><p>Average BG floater still on linear scale</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
+                    <dl>
+                      <dt><a href="bg-log-scale-2.html" target="_blank" class="lead">Log scale #2</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Average BG floater now on log scale too</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
+                </div>
             </div>
-        </div> -->
             <div class="jumbotron">
                 <div class="page-header">
                     <h1>
