update bg log scales gallery

--- a/example/index.html
+++ b/example/index.html
@@ -38,6 +38,14 @@
                         </ul>
                       </dd>
                     </dl>
+                    <dl>
+                      <dt><a href="bg-log-scale-3.html" target="_blank" class="lead">Log scale #3</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Domain lower bound set to 10...obviously undesirable; this is why I'm using the actual extent of the data to set the domain</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
                 </div>
             </div>
             <div class="jumbotron">
