add revised one-day navbar date label to gallery

--- a/example/index.html
+++ b/example/index.html
@@ -48,6 +48,18 @@
                     </dl>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <dl>
+                      <dt><a href="one-day-navstring.html" target="_blank" class="lead">One-day view revised date string</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Try navigating around and see if you end up confused about which day your data points are on</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
+                </div>
+            </div>
             <div class="jumbotron">
                 <div class="page-header">
                     <h1>
