--- a/example/current-progress.html
+++ b/example/current-progress.html
@@ -31,11 +31,13 @@
             <span class="tidelineNavLabel"><a href="#" id="twoWeekView">Two Weeks</a></span>
           </div>
           <div class="col-md-6" id="tidelineLabel">
-            <img src="blip_icons_back.svg" id="tidelineNavBack" class="one-day" />
+            <img src="blip_icons_back.svg" id="tidelineNavBack" class="tideline-nav"/>
             <span class="tidelineSpacer"></span>
-            <span class="tidelineNavLabel" id="tidelineNavString"></span>
+            <div class="tidelineNavLabelWrapper">
+              <span class="tidelineNavLabel" id="tidelineNavString"></span>
+            </div>
             <span class="tidelineSpacer"></span>
-            <img src="blip_icons_next.svg" id="tidelineNavForward" class="one-day" />
+            <img src="blip_icons_next.svg" id="tidelineNavForward" class="tideline-nav"/>
           </div>
           <div class="col-md-3 tidelineNavRightLabel">
             <span class="tidelineNavLabel one-day"><a href="#" id="oneDayMostRecent">Most Recent</a></span>
@@ -57,8 +59,8 @@
 
     <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../bower_components/d3/d3.min.js"></script>
-    <script type="text/javascript" src="../bower_components/lodash/dist/lodash.min.js"></script>
     <script type="text/javascript" src="../bower_components/Duration.js/duration.js"></script>
+    <script type="text/javascript" src="../bower_components/lodash/dist/lodash.min.js"></script>
     <script type="text/javascript" src="../bower_components/bows/dist/bows.min.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
