add a whole gallery section of options for two-week day ticks

--- a/example/index.html
+++ b/example/index.html
@@ -20,6 +20,44 @@
                 </div>
             </div> 
             <div class="row">
+                <h2 class="col-md-offset-1">Two-week view day axis</h2>
+                <div class="col-md-8 col-md-offset-2">
+                    <dl>
+                      <dt><a href="no-tick-lines-two-week.html" target="_blank" class="lead">No tick lines</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Removed the tick lines between days</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
+                    <dl>
+                      <dt><a href="day-ticks-dot-month.html" target="_blank" class="lead">Month.Date</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Add month to day ticks with a dot separator</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
+                    <dl>
+                      <dt><a href="day-ticks-dash-month.html" target="_blank" class="lead">Month-Date</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Add month to day ticks with a hyphen separator</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
+                    <dl>
+                      <dt><a href="day-ticks-text-month.html" target="_blank" class="lead">MonthName Date</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Add abbreviated month name to day ticks</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
+                </div>
+            </div>
+            <div class="row">
+                <h2 class="col-md-offset-1">Log scales</h2>
                 <div class="col-md-8 col-md-offset-2">
                     <dl>
                       <dt><a href="bg-log-scale-1.html" target="_blank" class="lead">Log scale #1</a></dt>
@@ -49,6 +87,7 @@
                 </div>
             </div>
             <div class="row">
+                <h2 class="col-md-offset-1">Misc</h2>
                 <div class="col-md-8 col-md-offset-2">
                     <dl>
                       <dt><a href="one-day-navstring.html" target="_blank" class="lead">One-day view revised date string</a></dt>
@@ -65,16 +104,6 @@
                     <h1>
                         Current Progress <small>the state of <a href="current-progress.html">things as they are</a></small>
                     </h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h3>
-                        Nota Bene:
-                    </h3>
-                    <p>
-                        The tooltips are anchored at the base of the rectangles because otherwise (if they were anchored at the tips of the rectangles) the carbs and bolus tooltips would overlap on small displays. I might be able to parametrize this depending on the size of the display, but for now I think this is best.
-                    </p>
                 </div>
             </div>
         </div>
