add no tick lines plus adding abbreviated month name option

--- a/example/index.html
+++ b/example/index.html
@@ -54,6 +54,14 @@
                         </ul>
                       </dd>
                     </dl>
+                    <dl>
+                      <dt><a href="no-tick-lines-text-month.html" target="_blank" class="lead">No tick lines + MonthName Date</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Combo of 1st and 4th options</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
                 </div>
             </div>
             <div class="row">
