add spaces surrounding hyphen option

--- a/example/index.html
+++ b/example/index.html
@@ -47,6 +47,14 @@
                       </dd>
                     </dl>
                     <dl>
+                      <dt><a href="day-ticks-dash-month-space.html" target="_blank" class="lead">Month - Date</a></dt>
+                      <dd>
+                        <ul class="list-unstyled">
+                            <li><p>Add month to day ticks with a hyphen separator, spaces surrounding hyphen</p></li>
+                        </ul>
+                      </dd>
+                    </dl>
+                    <dl>
                       <dt><a href="day-ticks-text-month.html" target="_blank" class="lead">MonthName Date</a></dt>
                       <dd>
                         <ul class="list-unstyled">
@@ -58,7 +66,7 @@
                       <dt><a href="no-tick-lines-text-month.html" target="_blank" class="lead">No tick lines + MonthName Date</a></dt>
                       <dd>
                         <ul class="list-unstyled">
-                            <li><p>Combo of 1st and 4th options</p></li>
+                            <li><p>Combo of 1st and 5th options</p></li>
                         </ul>
                       </dd>
                     </dl>
