add misc improvements to gallery

--- a/example/index.html
+++ b/example/index.html
@@ -18,98 +18,15 @@
                         Gallery <!-- <small>is empty right now... :(</small> -->
                     </h1>
                 </div>
-            </div> 
-            <div class="row">
-                <h2 class="col-md-offset-1">Two-week view day axis</h2>
-                <div class="col-md-8 col-md-offset-2">
-                    <dl>
-                      <dt><a href="no-tick-lines-two-week.html" target="_blank" class="lead">No tick lines</a></dt>
-                      <dd>
-                        <ul class="list-unstyled">
-                            <li><p>Removed the tick lines between days</p></li>
-                        </ul>
-                      </dd>
-                    </dl>
-                    <dl>
-                      <dt><a href="day-ticks-dot-month.html" target="_blank" class="lead">Month.Date</a></dt>
-                      <dd>
-                        <ul class="list-unstyled">
-                            <li><p>Add month to day ticks with a dot separator</p></li>
-                        </ul>
-                      </dd>
-                    </dl>
-                    <dl>
-                      <dt><a href="day-ticks-dash-month.html" target="_blank" class="lead">Month-Date</a></dt>
-                      <dd>
-                        <ul class="list-unstyled">
-                            <li><p>Add month to day ticks with a hyphen separator</p></li>
-                        </ul>
-                      </dd>
-                    </dl>
-                    <dl>
-                      <dt><a href="day-ticks-dash-month-space.html" target="_blank" class="lead">Month - Date</a></dt>
-                      <dd>
-                        <ul class="list-unstyled">
-                            <li><p>Add month to day ticks with a hyphen separator, spaces surrounding hyphen</p></li>
-                        </ul>
-                      </dd>
-                    </dl>
-                    <dl>
-                      <dt><a href="day-ticks-text-month.html" target="_blank" class="lead">MonthName Date</a></dt>
-                      <dd>
-                        <ul class="list-unstyled">
-                            <li><p>Add abbreviated month name to day ticks</p></li>
-                        </ul>
-                      </dd>
-                    </dl>
-                    <dl>
-                      <dt><a href="no-tick-lines-text-month.html" target="_blank" class="lead">No tick lines + MonthName Date</a></dt>
-                      <dd>
-                        <ul class="list-unstyled">
-                            <li><p>Combo of 1st and 5th options</p></li>
-                        </ul>
-                      </dd>
-                    </dl>
-                </div>
-            </div>
-            <div class="row">
-                <h2 class="col-md-offset-1">Log scales</h2>
-                <div class="col-md-8 col-md-offset-2">
-                    <dl>
-                      <dt><a href="bg-log-scale-1.html" target="_blank" class="lead">Log scale #1</a></dt>
-                      <dd>
-                        <ul class="list-unstyled">
-                            <li><p>Domain set to extent (i.e., min, max) of actual data</p></li>
-                            <li><p>Average BG floater still on linear scale</p></li>
-                        </ul>
-                      </dd>
-                    </dl>
-                    <dl>
-                      <dt><a href="bg-log-scale-2.html" target="_blank" class="lead">Log scale #2</a></dt>
-                      <dd>
-                        <ul class="list-unstyled">
-                            <li><p>Average BG floater now on log scale too</p></li>
-                        </ul>
-                      </dd>
-                    </dl>
-                    <dl>
-                      <dt><a href="bg-log-scale-3.html" target="_blank" class="lead">Log scale #3</a></dt>
-                      <dd>
-                        <ul class="list-unstyled">
-                            <li><p>Domain lower bound set to 10...obviously undesirable; this is why I'm using the actual extent of the data to set the domain</p></li>
-                        </ul>
-                      </dd>
-                    </dl>
-                </div>
             </div>
             <div class="row">
                 <h2 class="col-md-offset-1">Misc</h2>
                 <div class="col-md-8 col-md-offset-2">
                     <dl>
-                      <dt><a href="one-day-navstring.html" target="_blank" class="lead">One-day view revised date string</a></dt>
+                      <dt><a href="misc-improvements.html" target="_blank" class="lead">Misc improvements</a></dt>
                       <dd>
                         <ul class="list-unstyled">
-                            <li><p>Try navigating around and see if you end up confused about which day your data points are on</p></li>
+                            <li><p>Minor tweaks to the fonts and color scheme</p></li>
                         </ul>
                       </dd>
                     </dl>
