move index.html because Jekyll no longer allows it in embedded dir

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>
             Tideline: Visualization Options Gallery
         </title><!-- Bootstrap -->
-        <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="container-fluid">
@@ -23,7 +23,7 @@
                 <h2 class="col-md-offset-1">Misc</h2>
                 <div class="col-md-8 col-md-offset-2">
                     <dl>
-                      <dt><a href="misc-improvements.html" target="_blank" class="lead">Misc improvements</a></dt>
+                      <dt><a href="example/misc-improvements.html" target="_blank" class="lead">Misc improvements</a></dt>
                       <dd>
                         <ul class="list-unstyled">
                             <li><p>Minor tweaks to the fonts and color scheme</p></li>
@@ -35,7 +35,7 @@
             <div class="jumbotron">
                 <div class="page-header">
                     <h1>
-                        Current Progress <small>the state of <a href="current-progress.html">things as they are</a></small>
+                        Current Progress <small>the state of <a href="example/current-progress.html">things as they are</a></small>
                     </h1>
                 </div>
             </div>
