remove outdated stuff; update some tooling; update current progress

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
             <div class="jumbotron">
                 <div class="page-header">
                     <h1>
-                        Gallery <!-- <small>is empty right now... :(</small> -->
+                        Gallery <small>is empty right now... :(</small>
                     </h1>
                 </div>
             </div>
-            <div class="row">
-                <h2 class="col-md-offset-1">Misc</h2>
+<!--             <div class="row">
+                <h2 class="col-md-offset-1"></h2>
                 <div class="col-md-8 col-md-offset-2">
                     <dl>
-                      <dt><a href="example/misc-improvements.html" target="_blank" class="lead">Misc improvements</a></dt>
+                      <dt><a href="example/.html" target="_blank" class="lead"></a></dt>
                       <dd>
                         <ul class="list-unstyled">
-                            <li><p>Minor tweaks to the fonts and color scheme</p></li>
+                            <li><p></p></li>
                         </ul>
                       </dd>
                     </dl>
                 </div>
-            </div>
+            </div> -->
             <div class="jumbotron">
                 <div class="page-header">
                     <h1>
