--- a/example/current-progress.html
+++ b/example/current-progress.html
@@ -19,8 +19,7 @@
     <meta charset="utf-8">
     <meta name='viewport' content='width=device-width' />
     <title>Tideline: Current Progress</title>
-    <link href="less/example.less" rel="stylesheet/less" type="text/css">
-    <script type="text/javascript" src="../bower_components/less/dist/less-1.7.0.js"></script>
+    <link href="example.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <script type="text/javascript" src="../bower_components/bows/dist/bows.min.js"></script>
