--- a/example/current-progress.html
+++ b/example/current-progress.html
@@ -16,7 +16,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name='viewport' content='width=device-width' />
     <title>Tideline: Current Progress</title>
     <link href="example.css" rel="stylesheet" type="text/css">
