update gallery with current progress (new header), message cursor option

--- a/index.html
+++ b/index.html
@@ -29,22 +29,44 @@
  <div class="col-md-8 col-md-offset-2">
   <dl>
    <dt>
-    <a class="lead" href="example/jebeck-update-colors.html" target="_blank">
-     New BG colors
+    <a class="lead" href="example/jebeck-message-cursors.html" target="_blank">
+     Message cursors
     </a>
    </dt>
    <dd>
     <ul class="list-unstyled">
      <li>
       <p>
-       Update BG colors to more color-blind-friendly scheme
+       Quick, bite-sized attempt to use built-in CSS cursors to make message interactions clearer; pointer cursor for clicking on existing message, plus for message pool background
       </p>
      </li>
     </ul>
    </dd>
   </dl>
  </div>
-</div>   <div class="jumbotron">
+</div>   <div class="row gallery-item">
+    <h2 class="col-md-offset-1">
+    </h2>
+    <div class="col-md-8 col-md-offset-2">
+     <dl>
+      <dt>
+       <a class="lead" href="example/jebeck-update-colors.html" target="_blank">
+        New BG colors
+       </a>
+      </dt>
+      <dd>
+       <ul class="list-unstyled">
+        <li>
+         <p>
+          Update BG colors to more color-blind-friendly scheme
+         </p>
+        </li>
+       </ul>
+      </dd>
+     </dl>
+    </div>
+   </div>
+   <div class="jumbotron">
     <div class="page-header">
      <h1>
       Current Progress
