add first stab at improving daily chart time axis to gallery

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
  <div class="col-md-8 col-md-offset-2">
   <dl>
    <dt>
-    <a class="lead" href="example/jebeck-message-cursors.html" target="_blank">
-     Message cursors
+    <a class="lead" href="example/jebeck-new-time-axis.html" target="_blank">
+     Daily chart x-axis improvements
     </a>
    </dt>
    <dd>
     <ul class="list-unstyled">
      <li>
       <p>
-       Quick, bite-sized attempt to use built-in CSS cursors to make message interactions clearer; pointer cursor for clicking on existing message, plus for message pool background
+       First stab at improving the daily chart's x-axis with a sticky day label on the left and a rolling day label attached to midnight
       </p>
      </li>
     </ul>
@@ -45,6 +45,28 @@
   </dl>
  </div>
 </div>   <div class="row gallery-item">
+    <h2 class="col-md-offset-1">
+    </h2>
+    <div class="col-md-8 col-md-offset-2">
+     <dl>
+      <dt>
+       <a class="lead" href="example/jebeck-message-cursors.html" target="_blank">
+        Message cursors
+       </a>
+      </dt>
+      <dd>
+       <ul class="list-unstyled">
+        <li>
+         <p>
+          Quick, bite-sized attempt to use built-in CSS cursors to make message interactions clearer; pointer cursor for clicking on existing message, plus for message pool background
+         </p>
+        </li>
+       </ul>
+      </dd>
+     </dl>
+    </div>
+   </div>
+   <div class="row gallery-item">
     <h2 class="col-md-offset-1">
     </h2>
     <div class="col-md-8 col-md-offset-2">
