update daily chart new x-axis option; add option with full date label as in header

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
  <div class="col-md-8 col-md-offset-2">
   <dl>
    <dt>
-    <a class="lead" href="example/jebeck-new-time-axis.html" target="_blank">
-     Daily chart x-axis improvements
+    <a class="lead" href="example/jebeck-barbiter-date-option.html" target="_blank">
+     New x-axis with date label matching header
     </a>
    </dt>
    <dd>
     <ul class="list-unstyled">
      <li>
       <p>
-       First stab at improving the daily chart's x-axis with a sticky day label on the left and a rolling day label attached to midnight
+       Make the date label in the new x-axis match the header date label (to a first approximation, D3 doesn't do the ordinal number -th, etc. so moment will have to be brought in for that if we want to pursue this option)
       </p>
      </li>
     </ul>
@@ -45,6 +45,28 @@
   </dl>
  </div>
 </div>   <div class="row gallery-item">
+    <h2 class="col-md-offset-1">
+    </h2>
+    <div class="col-md-8 col-md-offset-2">
+     <dl>
+      <dt>
+       <a class="lead" href="example/jebeck-new-time-axis.html" target="_blank">
+        Daily chart x-axis improvements
+       </a>
+      </dt>
+      <dd>
+       <ul class="list-unstyled">
+        <li>
+         <p>
+          First stab at improving the daily chart's x-axis with a sticky day label on the left and a rolling day label attached to midnight
+         </p>
+        </li>
+       </ul>
+      </dd>
+     </dl>
+    </div>
+   </div>
+   <div class="row gallery-item">
     <h2 class="col-md-offset-1">
     </h2>
     <div class="col-md-8 col-md-offset-2">
