--- a/index.html
+++ b/index.html
@@ -1,128 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="utf-8">
-   <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
-     <title>
-      Tideline: Visualization Options Gallery
-     </title>
-     <!-- Bootstrap -->
-     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-     </link>
-    </meta>
-   </meta>
-  </meta>
- </head>
- <body>
-  <div class="container-fluid">
-   <div class="jumbotron" id="gallery">
-    <div class="page-header">
-     <h1>
-      Gallery
-     </h1>
-    </div>
-   </div>
-<div class="row gallery-item">
- <h2 class="col-md-offset-1">
- </h2>
- <div class="col-md-8 col-md-offset-2">
-  <dl>
-   <dt>
-    <a class="lead" href="example/jebeck-barbiter-date-option.html" target="_blank">
-     New x-axis with date label matching header
-    </a>
-   </dt>
-   <dd>
-    <ul class="list-unstyled">
-     <li>
-      <p>
-       Make the date label in the new x-axis match the header date label (to a first approximation, D3 doesn't do the ordinal number -th, etc. so moment will have to be brought in for that if we want to pursue this option)
-      </p>
-     </li>
-    </ul>
-   </dd>
-  </dl>
- </div>
-</div>   <div class="row gallery-item">
-    <h2 class="col-md-offset-1">
-    </h2>
-    <div class="col-md-8 col-md-offset-2">
-     <dl>
-      <dt>
-       <a class="lead" href="example/jebeck-new-time-axis.html" target="_blank">
-        Daily chart x-axis improvements
-       </a>
-      </dt>
-      <dd>
-       <ul class="list-unstyled">
-        <li>
-         <p>
-          First stab at improving the daily chart's x-axis with a sticky day label on the left and a rolling day label attached to midnight
-         </p>
-        </li>
-       </ul>
-      </dd>
-     </dl>
-    </div>
-   </div>
-   <div class="row gallery-item">
-    <h2 class="col-md-offset-1">
-    </h2>
-    <div class="col-md-8 col-md-offset-2">
-     <dl>
-      <dt>
-       <a class="lead" href="example/jebeck-message-cursors.html" target="_blank">
-        Message cursors
-       </a>
-      </dt>
-      <dd>
-       <ul class="list-unstyled">
-        <li>
-         <p>
-          Quick, bite-sized attempt to use built-in CSS cursors to make message interactions clearer; pointer cursor for clicking on existing message, plus for message pool background
-         </p>
-        </li>
-       </ul>
-      </dd>
-     </dl>
-    </div>
-   </div>
-   <div class="row gallery-item">
-    <h2 class="col-md-offset-1">
-    </h2>
-    <div class="col-md-8 col-md-offset-2">
-     <dl>
-      <dt>
-       <a class="lead" href="example/jebeck-update-colors.html" target="_blank">
-        New BG colors
-       </a>
-      </dt>
-      <dd>
-       <ul class="list-unstyled">
-        <li>
-         <p>
-          Update BG colors to more color-blind-friendly scheme
-         </p>
-        </li>
-       </ul>
-      </dd>
-     </dl>
-    </div>
-   </div>
-   <div class="jumbotron">
-    <div class="page-header">
-     <h1>
-      Current Progress
-      <small>
-       the state of
-       <a href="example/current-progress.html">
-        things as they are
-       </a>
-      </small>
-     </h1>
-    </div>
-   </div>
-  </div>
- </body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>
+            Tideline: Visualization Options Gallery
+        </title><!-- Bootstrap -->
+        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <div class="container-fluid">
+            <div class="jumbotron" id="gallery">
+                <div class="page-header">
+                    <h1>
+                        Gallery <small>is empty right now... :(</small>
+                    </h1>
+                </div>
+            </div>
+            <div class="jumbotron">
+                <div class="page-header">
+                    <h1>
+                        Current Progress <small>the state of <a href="example/current-progress.html">things as they are</a></small>
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
