--- a/index.html
+++ b/index.html
@@ -1,30 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>
-            Tideline: Visualization Options Gallery
-        </title><!-- Bootstrap -->
-        <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <div class="container-fluid">
-            <div class="jumbotron" id="gallery">
-                <div class="page-header">
-                    <h1>
-                        Gallery <small>is empty right now... :(</small>
-                    </h1>
-                </div>
-            </div>
-            <div class="jumbotron">
-                <div class="page-header">
-                    <h1>
-                        Current Progress <small>the state of <a href="example/current-progress.html">things as they are</a></small>
-                    </h1>
-                </div>
-            </div>
-        </div>
-    </body>
+ <head>
+  <meta charset="utf-8">
+   <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+     <title>
+      Tideline: Visualization Options Gallery
+     </title>
+     <!-- Bootstrap -->
+     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+     </link>
+    </meta>
+   </meta>
+  </meta>
+ </head>
+ <body>
+  <div class="container-fluid">
+   <div class="jumbotron" id="gallery">
+    <div class="page-header">
+     <h1>
+      Gallery
+     </h1>
+    </div>
+   </div>
+<div class="row gallery-item">
+ <h2 class="col-md-offset-1">
+ </h2>
+ <div class="col-md-8 col-md-offset-2">
+  <dl>
+   <dt>
+    <a class="lead" href="example/ianjorgensen-shadow.html" target="_blank">
+     Bolus shadow
+    </a>
+   </dt>
+   <dd>
+    <ul class="list-unstyled">
+     <li>
+      <p>
+       Add a subtle shadow to boluses to help distinguish overlapping boluses
+      </p>
+     </li>
+    </ul>
+   </dd>
+  </dl>
+ </div>
+</div>   <div class="jumbotron">
+    <div class="page-header">
+     <h1>
+      Current Progress
+      <small>
+       the state of
+       <a href="example/current-progress.html">
+        things as they are
+       </a>
+      </small>
+     </h1>
+    </div>
+   </div>
+  </div>
+ </body>
 </html>
