add native SVG basal tooltips and overridden temps to gallery

--- a/index.html
+++ b/index.html
@@ -29,22 +29,66 @@
  <div class="col-md-8 col-md-offset-2">
   <dl>
    <dt>
-    <a class="lead" href="example/ianjorgensen-shadow.html" target="_blank">
-     Bolus shadow
+    <a class="lead" href="example/jebeck-overridden-temps.html" target="_blank">
+     Overridden temp basals
     </a>
    </dt>
    <dd>
     <ul class="list-unstyled">
      <li>
       <p>
-       Add a subtle shadow to boluses to help distinguish overlapping boluses
+       Visualize overridden temp basals with red dotted line
       </p>
      </li>
     </ul>
    </dd>
   </dl>
  </div>
-</div>   <div class="jumbotron">
+</div>   <div class="row gallery-item">
+    <h2 class="col-md-offset-1">
+    </h2>
+    <div class="col-md-8 col-md-offset-2">
+     <dl>
+      <dt>
+       <a class="lead" href="example/jebeck-plot-basals.html" target="_blank">
+        Basal tooltips
+       </a>
+      </dt>
+      <dd>
+       <ul class="list-unstyled">
+        <li>
+         <p>
+          Native SVG basal tooltips
+         </p>
+        </li>
+       </ul>
+      </dd>
+     </dl>
+    </div>
+   </div>
+   <div class="row gallery-item">
+    <h2 class="col-md-offset-1">
+    </h2>
+    <div class="col-md-8 col-md-offset-2">
+     <dl>
+      <dt>
+       <a class="lead" href="example/ianjorgensen-shadow.html" target="_blank">
+        Bolus shadow
+       </a>
+      </dt>
+      <dd>
+       <ul class="list-unstyled">
+        <li>
+         <p>
+          Add a subtle shadow to boluses to help distinguish overlapping boluses
+         </p>
+        </li>
+       </ul>
+      </dd>
+     </dl>
+    </div>
+   </div>
+   <div class="jumbotron">
     <div class="page-header">
      <h1>
       Current Progress
