add table-style bolus/wizard tooltips to the gallery

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
  <div class="col-md-8 col-md-offset-2">
   <dl>
    <dt>
-    <a class="lead" href="example/jebeck-moar-native-tooltips.html" target="_blank">
-     Native SVG tooltips
+    <a class="lead" href="example/jebeck-moar-native-tooltips-2.html" target="_blank">
+     Table-style bolus/wizard tooltips
     </a>
    </dt>
    <dd>
     <ul class="list-unstyled">
      <li>
       <p>
-       All tooltips gone native \o/ ...but what's in them is a bit rough at the moment...
+       Two-column table layout for bolus/wizard tooltips
       </p>
      </li>
     </ul>
@@ -45,6 +45,28 @@
   </dl>
  </div>
 </div>   <div class="row gallery-item">
+    <h2 class="col-md-offset-1">
+    </h2>
+    <div class="col-md-8 col-md-offset-2">
+     <dl>
+      <dt>
+       <a class="lead" href="example/jebeck-moar-native-tooltips.html" target="_blank">
+        Native SVG tooltips
+       </a>
+      </dt>
+      <dd>
+       <ul class="list-unstyled">
+        <li>
+         <p>
+          All tooltips gone native \o/ ...but what's in them is a bit rough at the moment...
+         </p>
+        </li>
+       </ul>
+      </dd>
+     </dl>
+    </div>
+   </div>
+   <div class="row gallery-item">
     <h2 class="col-md-offset-1">
     </h2>
     <div class="col-md-8 col-md-offset-2">
